# agent-orchestra

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  llm.py  main.py
app/agents/: __init__.py  base.py  competitive_analyst.py  developer.py  lead_gen.py  market_researcher.py  marketing.py  orchestrator.py  prevalidation.py
app/api/: __init__.py  routes.py
app/graph/: state.py  workflow.py
app/models/: schemas.py
app/tools/: __init__.py  code_executor.py  data_analysis.py  web_scraper.py  web_search.py
dashboard/: app.py
skills/competitive_analyst/: SKILL.md
skills/developer/: SKILL.md
skills/lead_gen/: SKILL.md
skills/market_researcher/: SKILL.md
skills/marketing/: SKILL.md
skills/prevalidation/: SKILL.md
